# EterniaLibrary

./: .CMakeLists.txt.swp  .cproject  .directory  .gitignore  .gitignore.save  .project  .spec  1  CHANGELOG  CMakeLists.txt  CMakeLists.txt.tmp  CMake_DebianPackaging.cmake  CMake_MingW64.cmake  COPYRIGHT  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  CellMaterials.ods  Doxyfile  Doxyfile.bak  Eternia.h  EterniaExec  EterniaLib  EterniaLib.cbp  EterniaLib.depend  EterniaLib.layout  EterniaLibrary  EterniaLibrary.spec  LICENSE.txt  Makefile  OPTIMIZATION.md  README.md  TODO  build.txt  copyincludes.sh  data.txt  install  libEternia.a.1  loopmake.sh  main.cpp  (+12 more)
.bzr/checkout/: dirstate
.github/workflows/: cmake.yml  cppcheck-action.yml
Documentation/ai/: index.md
Documentation/api/: builtin-permissions.md  index.md  usage.md
Documentation/data/: charstring.md  index.md
Windows/: CMakeLists.txt  Toolchain-Mingw32.cmake  Toolchain-Mingw64.cmake
build_scripts/: copyincludes.sh  loopmake.sh  makerpm.sh
debian/: changelog  control  copyright  rules
doc/: index.md
doc/man/man8/: EterniaExec.1  EterniaTest.1
html/: Eternia_8h_source.html  constants_8h_source.html  defs_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  include_8h_source.html  md_OPTIMIZATION.html  md_README.html  pages.html  version_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  pages_0.js  pages_1.js  pages_2.js
include/Eternia/: constants.h  test.h
include/Eternia/AI/: AITickOutput.h  GenericAI.h
include/Eternia/API/: APIEventRegistry.h  APIMod.h  APIPermission.h  APIUser.h
include/Eternia/Audio/: AudioBuffer.h
include/Eternia/Data/: BitMap.cpp  BitMap.h  (+26 more)
latex/: Eternia_8h_source.tex  constants_8h_source.tex  defs_8h_source.tex  files.tex  include_8h_source.tex  md_OPTIMIZATION.tex  md_README.tex  refman.tex  version_8h_source.tex
old_src/AI/: GenericAINode.h  GenericVariable.h
old_src/PacketServer/: NetworkManager.h
src/: .directory  Eternia.h  constants.cpp  constants.h  defs.h  include.h  main.cpp  test.h  version.h
src/AI/: AI.h  AIFactory.h  AIGraph_train.cpp  AIMonarch.h  AI_Layer.h  GenericAI.cpp  ai.h
src/API/: APICore.cpp  APICore.h  APIEventRegistry.cpp  APIEventRegistry.h  APIGroup.h  APIMod.cpp  APIMod.h  APIPermission.cpp  APIPermission.h  APIPermissionsRegistry.cpp  APIPermissionsRegistry.h  APIUser.cpp  APIUser.h
src/Algorithm/: includes.h
src/Audio/: AudioBuffer.h
src/Business/: ALocation.h  AssetHolder.h  BEntity.h  Company.h  Employee.h  Lawyer.h  Person.h  README.txt  includes.h
src/Data/: AIGraph.cpp  AIGraph.h  AIGraphLayer.hpp  AIGraphNode.hpp  ArrayList.hpp  ArrayListIterator.hpp  BitMap.cpp  BitMap.h  CRCData.hpp  CharString.cpp  CharString.h  CharString_static.cpp  ConcurrentLinkedList.cpp  ConcurrentLinkedList.h  ConcurrentLinkedList.hpp  CyclicList.hpp  DoubleList.cpp  DoubleList.h  DynamicType.cpp  DynamicType.h  FileCache.cpp  FileCache.h  FileCache.hpp  FileCache_Policy.cpp  FileCache_Policy.h  FileSystem.cpp  FileSystem.h  Graph.cpp  Graph.h  HashMap.hpp  HashMap.hpp~  HashTable.cpp  HashTable.h  Heap.cpp  Heap.h  IntegerList.cpp  IntegerList.h  LinkedList.hpp  LinkedListIterator.hpp  LinkedListPtr.hpp  (+28 more)
src/Design/: Colors.h  IAnimated.cpp  IAnimated.h  Layout.h  LayoutObject.h  LocalLayout.h  View.h  includes.h
src/Driver/: DriverCore.h  LinuxDriver.h  OSXDriver.h  WinDriver.h
src/Emulation/: SecondTick.cpp  SecondTick.h  includes.h
src/Engineering/: includes.h
src/Events/: EventHandle.cpp  EventHandle.h  EventHandle.h~  EventHandler.h
src/Gamelogic/: GameLogicSpecs.txt  gamelogic.h
src/Localization/: LanguageController.cpp  LanguageController.h  langController.h
src/Math/: Arbitrary.cpp  Arbitrary.h  ArbitraryInteger.cpp  ArbitraryInteger.h  Complex.hpp  Equation.cpp  Equation.h  Equation_CALC.cpp  Eval.cpp  Eval.h  LinkedListMath.def.h  Math.h  Random.hpp
src/MiscLib/: .CharString.h.kate-swp  CharString.cpp  CharString.h  EfficiencyTimer.cpp  EfficiencyTimer.h  SplitResult.h
src/Network/: SockClient.cpp  SockClient.h  SocketServer.cpp  SocketServer.h  network.h
src/Networking/: NetworkManager.cpp  NetworkManager.h
src/Parsing/: CodeParser.h  Config.cpp  Config.h  HTMLParser.cpp  HTMLParser.h  HTMLTags.h  InputRedirection.cpp  InputRedirection.h  LoadFile.cpp  LoadFile.h  Regex.cpp  Regex.h  SecuredParser.cpp  SecuredParser.h  SimpleParser.cpp  SimpleParser.cpp~  SimpleParser.h  SimpleParser.h~  includes.h
src/Programming/: EfficiencyTimer.cpp  EfficiencyTimer.h  Instruction.h  Program.cpp  Program.h  ProgramError.cpp  ProgramError.h  ProgrammingLanguage.h
src/Serialization/: BasicSerializer.cpp  BasicSerializer.h  BinaryPacker.h  BinaryUnpacker.h  SpecificSerializer.cpp  SpecificSerializer.h  SpecificSerializer_JSON.cpp  includes.h
src/Signal/: .Signal.h.kate-swp  CLKProvider.h  FreqSignal.h  Signal.h  TimeSignal.h
src/Simulation/: Action.h  BodyLocation.h  CEntity.cpp  CEntity.h  Entity.cpp  Entity.h  Location.cpp  Location.h  Object.h  SLocation.h  include.h
src/TestEnv/: TestConfig.cpp  TestConfig.h  TestIf.h  TestLess.h  include.h
src/WebFramework/: includes.h  namespace.h
src/asm/: asm1.cpp  asm1.h
test/: test.cpp  test.h
test/AI/: testAI.h  testLSTM_XOR4.cpp
test/Data/: testAbstractDB.h  testDataStructures.cpp  testDataStructures.h  testLogger.cpp  testLogger.h
test/Math/: testMath.cpp  testMath.h
test/Parsing/: testParsers.h
test/Serialization/: testSerializers.hpp
tests/: CMakeLists.txt  EterniaTests[1]_include.cmake  NewTests[1]_include.cmake  test.cpp
tests/API/: testAPI.h
tests/Algorithm/Cryptography/: testExHash.hpp
tests/Data/: CharStringTest.cpp  testAbstractDB.cpp  testEventHandler.hpp  testPType.cpp  testPType.h
tests/Engineering/Physics/: testFriction.cpp  testGravity.cpp  testGravity.h  testOrbit.cpp  testOrbit.h  testViscosityCurve.cpp
tests/Network/: NetworkTest.hpp
tests/Parsing/: testParsers.cpp
tmp/: EterniaLib-cfgcmd.txt
www/: index.html
www/restfultest/: index.html
(+1029 files in other folders)
